<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#BEF8F2"
    tools:context=".MainActivity">


    <!-- Heading RESMAKE -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_resmake"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>


    <!-- Card View for FORM -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:elevation="4dp">

        <TextView
            android:layout_width="378dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/form"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Card View for LATEX CODE -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewLatex"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:elevation="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/latex_code"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Card View for VIEW DATA -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@android:color/holo_blue_dark"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:elevation="4dp"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#20EFDD"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/view_data"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Card View for PRINT DATA -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewPrint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:elevation="4dp"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/print_text"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Card View for DELETE DATA -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewDelete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/colorAccent"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:elevation="4dp"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/delete_text"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>
